Embeds the canonical format for box plot statistics into the wres.datamodel.
Refs #80267